--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,6 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
+
+
 
     <ImageButton
         android:id="@+id/button"
@@ -25,5 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:id="@+id/share"
+        android:layout_width="25dip"
+        android:layout_height="25dip"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/share"
+        android:background="@drawable/share"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
